--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Apr 29 20:04:53 GMT 2017
-sdk.dir=/home/yenteck/Android/Sdk
+#Tue May 09 10:37:34 WEST 2017
+sdk.dir=C\:\\Users\\SAM\\AppData\\Local\\Android\\Sdk
